--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
       "driver": "PostgreSQL",
       "name": "biblioteca",
       "database": "biblioteca",
-      "username": "Gustavo"
+      "username": "gustavo"
     }
   ]
 }
